User Service Update: added particular id events responce
