# events/api/swagger.yaml
@@ -118,6 +118,19 @@ paths:
                 $ref: '#/components/schemas/UserResponse'
         '404':
           description: Event not found
+  /users/{id}/events:
+    get:
+      summary: Get events by user
+      description: Get events by user
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Event'
 
 components:
   schemas:
